--- a/TypeCheckerGenerator/latex/EtaRule.tex
+++ b/TypeCheckerGenerator/latex/EtaRule.tex
@@ -122,18 +122,14 @@ Later we will show how we might fully normalize a term using a technique
 known as normalization by evaluation. In order to do this, we will find
 that we require the ability to perform $η$-expansion.
 
-In a future draft of this work, we may include a way that we can
-synthesize such rules from other information that is given. However,
-for now, we merely give the type of such rules, and a method of performing
-the expansion according to such a rule.
-
 In our η-rule, we store only the eliminator for each place in the pattern,
 then to generate the eta expanded form, we map the elimination of the target
 over this environment of eliminators to get the full eliminations that
 are destined for each place in the pattern. This is very straightforward
 as a concept but we have to fix-up out types a little in order to convince
-Agda of the well-scopedness.
-
+Agda of the well-scopedness. We use a mapping function we defined, but did not
+mention, at an earlier stage in order to easy map over an the environment to
+build the eliminations from the eliminators.
 \begin{code}%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{η-Rule}\AgdaSpace{}%
@@ -165,49 +161,6 @@ Agda of the well-scopedness.
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaFunction{η-match}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{type}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Const}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Failable}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaField{input}\AgdaSpace{}%
-\AgdaField{checkRule}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaFunction{η-match}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaKeyword{with}%
-\>[19]\AgdaFunction{match}\AgdaSpace{}%
-\AgdaBound{ty}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
-\AgdaField{checkRule}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaString{"No match."}\<%
-\\
-%
-\>[2]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{just}\AgdaSpace{}%
-\AgdaBound{i}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
-\AgdaBound{i}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaFunction{eliminations}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{type}\AgdaSpace{}%
@@ -230,9 +183,9 @@ Agda of the well-scopedness.
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{=}%
-\>[113I]\AgdaFunction{map}\<%
+\>[85I]\AgdaFunction{map}\<%
 \\
-\>[113I][@{}l@{\AgdaIndent{0}}]%
+\>[85I][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{const}\AgdaSpace{}%
@@ -281,6 +234,47 @@ Agda of the well-scopedness.
 \end{code}
 \hide{
 \begin{code}%
+%
+\>[2]\AgdaFunction{η-match}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{type}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Failable}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaField{input}\AgdaSpace{}%
+\AgdaField{checkRule}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{η-match}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaKeyword{with}%
+\>[19]\AgdaFunction{match}\AgdaSpace{}%
+\AgdaBound{ty}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
+\AgdaField{checkRule}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{fail}\AgdaSpace{}%
+\AgdaString{"No match."}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaBound{i}\<%
+\\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{η-Rule}\<%
 \\
