Improved type readability

--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -245,10 +245,7 @@ Ty
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Prem}%
 \>[11]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{q}\AgdaSpace{}%
+\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
@@ -393,12 +390,12 @@ Ty
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{⊗premise}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[229I]\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
+\>[226I]\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[229I]%
+\>[.][@{}l@{}]\<[226I]%
 \>[11]\AgdaDatatype{Prem}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{q}\AgdaSpace{}%
@@ -868,10 +865,7 @@ previous premise has asked us to trust contains no places.
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Prems}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p₀}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{q₀}\AgdaSpace{}%
+\AgdaBound{q₀}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1021,12 +1015,12 @@ a type rule is just attempting to match the subject pattern.
 \begin{code}%
 \>[0]\AgdaFunction{match-typerule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[659I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
+\>[653I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{TypeRule}\AgdaSymbol{)}%
 \>[36]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[659I]%
+\>[.][@{}l@{}]\<[653I]%
 \>[17]\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}%
@@ -1341,7 +1335,7 @@ Matching a Universe rule involves matching the input only.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{-svar}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[880I]\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\>[874I]\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{svar}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
@@ -1354,7 +1348,7 @@ Matching a Universe rule involves matching the input only.
 \AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[880I][@{}l@{\AgdaIndent{0}}]%
+\>[874I][@{}l@{\AgdaIndent{0}}]%
 \>[10]\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{≢}}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
@@ -2052,12 +2046,12 @@ teased out some applicative structure.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{typeOf}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[1413I]\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
+\>[1407I]\AgdaSymbol{(}\AgdaBound{r}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{∋rule}\AgdaSymbol{)}%
 \>[39]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[1413I]%
+\>[.][@{}l@{}]\<[1407I]%
 \>[9]\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{svar}\AgdaSpace{}%
@@ -2118,7 +2112,7 @@ teased out some applicative structure.
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaFunction{lem}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[1451I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[1445I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{n}\AgdaSymbol{\}\{}\AgdaBound{δ'}\AgdaSymbol{\}\{}\AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{q'}\AgdaSpace{}%
@@ -2133,7 +2127,7 @@ teased out some applicative structure.
 \AgdaGeneralizable{δ}\AgdaSymbol{)\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[1451I]%
+\>[.][@{}l@{}]\<[1445I]%
 \>[10]\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{svar}\AgdaSpace{}%
@@ -2641,12 +2635,12 @@ teased out some applicative structure.
 \\
 \>[16][@{}l@{\AgdaIndent{0}}]%
 \>[18]\AgdaSymbol{(((}\AgdaGeneralizable{γ}%
-\>[1869I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\>[1863I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{input}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{))}%
 \>[41]\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[1869I]%
+\>[.][@{}l@{}]\<[1863I]%
 \>[23]\AgdaOperator{\AgdaFunction{×}}\<%
 \\
 \>[18][@{}l@{\AgdaIndent{0}}]%
@@ -2663,9 +2657,9 @@ teased out some applicative structure.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[1878I]\AgdaKeyword{do}\<%
+\>[1872I]\AgdaKeyword{do}\<%
 \\
-\>[1878I][@{}l@{\AgdaIndent{0}}]%
+\>[1872I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaBound{tyenv}%
 \>[14]\AgdaOperator{\AgdaFunction{←}}%
 \>[17]\AgdaFunction{match}\AgdaSpace{}%
@@ -2775,16 +2769,16 @@ matching both the target pattern and the eliminator.
 \AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1917I]\AgdaSymbol{((}\AgdaBound{γ}%
-\>[1918I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\>[1911I]\AgdaSymbol{((}\AgdaBound{γ}%
+\>[1912I]\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{targetPat}\AgdaSpace{}%
 \AgdaBound{rule}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[1918I]%
+\>[.][@{}l@{}]\<[1912I]%
 \>[24]\AgdaOperator{\AgdaFunction{×}}\<%
 \\
-\>[.][@{}l@{}]\<[1917I]%
+\>[.][@{}l@{}]\<[1911I]%
 \>[20]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{eliminator}\AgdaSpace{}%
@@ -2795,12 +2789,12 @@ matching both the target pattern and the eliminator.
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{match-erule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[1927I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
+\>[1921I]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{ElimRule}\AgdaSymbol{)}%
 \>[34]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[1927I]%
+\>[.][@{}l@{}]\<[1921I]%
 \>[14]\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
@@ -2826,9 +2820,9 @@ matching both the target pattern and the eliminator.
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1944I]\AgdaKeyword{do}\<%
+\>[1938I]\AgdaKeyword{do}\<%
 \\
-\>[1944I][@{}l@{\AgdaIndent{0}}]%
+\>[1938I][@{}l@{\AgdaIndent{0}}]%
 \>[25]\AgdaBound{T-env}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -2850,7 +2844,7 @@ matching both the target pattern and the eliminator.
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{s-env}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[1944I]%
+\>[.][@{}l@{}]\<[1938I]%
 \>[23]\AgdaKeyword{where}\<%
 \\
 \>[23][@{}l@{\AgdaIndent{0}}]%
