--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -970,6 +970,7 @@ previous premise has asked us to trust contains no places.
 \AgdaBound{prems}\<%
 \end{code}}
 \section{Typing Rules}
+\label{section-rules}
 
 Now we will define the various types that represent typing rules that
 might exist in some type checker.
@@ -2085,6 +2086,7 @@ teased out some applicative structure.
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\<%
 \end{code}
+\hl{TODO! - talk about typeof as we discuss it later in NBE}
 \hide{
 \begin{code}%
 \>[0]\AgdaFunction{typeOf}\AgdaSpace{}%
@@ -2303,7 +2305,7 @@ teased out some applicative structure.
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{"Type"}\<%
+\AgdaString{"set"}\<%
 \\
 %
 \>[4]\AgdaFunction{lem}\AgdaSpace{}%
