--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -1,4 +1,5 @@
 \section{Patterns}
+\label{section-patterns}
 
 \hide{
 \begin{code}%
@@ -1894,14 +1895,14 @@ that refers to it.
 
 The notion is that instead of encoding some path to a $place$ in the pattern,
 we instead encode some path between the pattern $p$ and some subpattern $q$. 
-$X$ encode an empty path between a pattern and itself, then we
+$X$ encodes an empty path between a pattern and itself, then we
 may extend it, say with "\_∙" or "∙\_" so that we now show the path between
 a pair, and one of the elements of that pair. We can continue in a similar fashion,
 building some path, and if we are lucky enough to have it end in a $place$, then
 we know we might convert it to the appropriate svar. This is normally used by
 selecting both $p$ and $q$ to be the pattern we are about to traverse, then 
 using the combinators as we traverse it to strip constructors off q while
-simultaniously encode that stripped constructor in the path being constructed.
+simultaniously encoding that stripped constructor in the path being constructed.
 
 \hide{
 \begin{code}%
